--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -37,11 +37,10 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./
+          source: ./build/client
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-          path: 'build/client'
 
   # Deployment job
   deploy:
